# restate-ffmpeg

./: Cargo.toml  Dockerfile  README.md  compose.yaml  devenv.nix
lib/: Cargo.toml
lib/src/: service.rs
