[package]
name = "restate-ffmpeg"
edition = { workspace = true }
version = { workspace = true }
description = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
publish = false

[dependencies]
anyhow = { workspace = true }
content_disposition = "0.4.0"
futures = "0.3"
http = "1.4.0"
humantime-serde = { workspace = true }
jiff = "0.2.19"
opendal = { workspace = true, features = [ "services-memory", "services-fs" ] }
opendal-util = { workspace = true }
paste = "1.0.15"
restate-sdk = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = "3.24.0"
tokio = { version = "1.49.0", features = ["process"] }
tokio-util = { version = "0.7.18", features = ["compat", "tracing"] }
typed-path = "0.12.2"
url = { workspace = true }
